[gd_scene load_steps=3 format=3 uid="uid://cmuirhd8wo6b8"]

[ext_resource type="PackedScene" uid="uid://bm73oge7dw6oh" path="res://file_list.tscn" id="1_cefv8"]
[ext_resource type="Script" path="res://browse.gd" id="1_gwlkh"]

[node name="Browse" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gwlkh")

[node name="FileList" parent="." instance=ExtResource("1_cefv8")]

[connection signal="file_selected" from="FileList" to="." method="_on_file_list_file_selected"]
[connection signal="list_back" from="FileList" to="." method="_on_file_list_list_back"]
